--- a/.github/workflows/ci-train.yml
+++ b/.github/workflows/ci-train.yml
@@ -18,14 +18,14 @@ jobs:
         with:
           python-version: "3.12"
 
-      - name: Install MLflow
+      - name: Install Dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install mlflow==2.19.0
+          pip install mlflow==2.19.0 pandas numpy scikit-learn
 
       - name: Run MLflow Project
         run: |
-          mlflow run MLProject
+          mlflow run MLProject --env-manager=local
 
       # Optional (bagus untuk bukti): upload folder mlruns sebagai artifact
       - name: Upload mlruns (optional)
