--- a/.github/workflows/ci-train.yml
+++ b/.github/workflows/ci-train.yml
@@ -2,7 +2,7 @@ name: CI - Train with MLflow Project
 
 on:
   push:
-    branches: ["main"]
+    branches: ["master"]
   workflow_dispatch:
 
 jobs:
