--- a/.github/workflows/ci-train.yml
+++ b/.github/workflows/ci-train.yml
@@ -30,5 +30,5 @@ jobs:
       - name: Upload MLflow artifacts
         uses: actions/upload-artifact@v4
         with:
-          name: mlflow-runs
+          name: mlruns
           path: mlruns
